--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.7.0",
+    "feather-icons": "^4.7.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-feather": "^1.1.3",
     "react-scripts": "1.1.5"
   },
   "scripts": {
